<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Fade</string>
    <string name="title_section1">Profile</string>
    <string name="title_section2">Messages</string>
    <string name="title_section3">Contacts</string>
    <string name="title_section4">Chat Live</string>
    <string name="title_section5">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="connect_to_twitter">Connect to Twitter</string>
    <string name="connect_to_facebook">Connect to Facebook</string>
    <string name="profile_about_me">ABOUT ME</string>
    <string name="profile_tell_about_yourself">Tell others about yourself.</string>
    <string name="profile_phone">PHONE</string>
    <string name="profile_social_networks">SOCIAL NETWORKS</string>
    <string name="profile_email">EMAIL</string>
    <string name="profile_location">LOCATION</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="welcome_sign_in">Welcome to Fade, Please Sign In</string>
    <string name="title_activity_google_plus_login">GooglePlusLoginActivity</string>
    <string name="hello_world">Hello world!</string>


    <string-array name="mock_conversation">
        <item>Sending a FADE is easy!  Just type your message below and tap the Send button.</item>
    </string-array>

</resources>
