<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:visibility="visible">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/default_avatar_2x" />

        <!--<ImageView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_alignBottom="@+id/imgPhoto"-->
        <!--android:layout_alignRight="@+id/imgPhoto"-->
        <!--android:src="@drawable/avatar_line" />-->

        <TextView
            android:id="@+id/full_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/profile_image"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/profile_image"
            android:clickable="false"
            android:gravity="center_vertical"
            android:text="Laith Alnagem"
            android:inputType="textPersonName|textCapSentences"
            android:minHeight="48dp"
            android:textSize="24dp" />

        <TextView
            android:id="@+id/handle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/full_name"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_toRightOf="@+id/profile_image"
            android:hint="*laith"
            android:minHeight="32dp"
            android:focusable="false" />
    </RelativeLayout>

    <TextView
        android:id="@+id/aboutMeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:gravity="bottom"
        android:paddingBottom="4dp"
        android:minHeight="36dp"
        android:text="@string/profile_about_me"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/profile_seperator" />


    <EditText
        android:id="@+id/inputAboutMe"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_centerInParent="true"
        android:text="@string/profile_tell_about_yourself"
        android:inputType="textMultiLine|textCapSentences"
        android:minHeight="48dp"
        android:paddingRight="32dp"
        android:gravity="center_vertical"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:gravity="bottom"
        android:paddingBottom="4dp"
        android:minHeight="36dp"
        android:text="@string/profile_social_networks"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/profile_seperator" />

    <TextView
        android:id="@+id/txtTwitter"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:text="@string/connect_to_twitter"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txtFacebook"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:gravity="center"
        android:paddingLeft="8dp"
        android:text="@string/connect_to_facebook"
        android:textSize="18dp" />


    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="24dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:gravity="bottom"-->
    <!--android:paddingBottom="4dp"-->
    <!--android:minHeight="36dp"-->
    <!--android:text="@string/profile_phone"-->
    <!--android:textColor="@android:color/darker_gray"-->
    <!--android:textStyle="bold" />-->

    <!--<ImageView-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="16dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:background="@drawable/profile_seperator" />-->


    <!--<TextView-->
    <!--android:id="@+id/txtPhoneNumber"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="24dp"-->
    <!--android:gravity="center_vertical"-->
    <!--android:minHeight="56dp"-->
    <!--android:paddingBottom="12dp"-->
    <!--android:text="@string/Add_Phone"-->
    <!--android:textColor="@color/blue"-->
    <!--android:textSize="18dp" />-->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:gravity="bottom"
        android:paddingBottom="4dp"
        android:minHeight="36dp"
        android:text="@string/profile_email"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/profile_seperator" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginLeft="24dp"
        android:gravity="center"
        android:paddingBottom="12dp"
        android:text="laith.alnagem@gmail.com"
        android:textSize="18dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:gravity="bottom"
        android:paddingBottom="4dp"
        android:minHeight="36dp"
        android:text="@string/profile_location"
        android:textColor="@android:color/darker_gray"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/profile_seperator" />

    <!--<TextView-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="24dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:gravity="bottom"-->
    <!--android:paddingBottom="4dp"-->
    <!--android:minHeight="36dp"-->
    <!--android:text="@string/WEBSITE"-->
    <!--android:textColor="@color/grey"-->
    <!--android:textSize="@dimen/text_size_small"-->
    <!--android:textStyle="bold" />-->

    <!--<ImageView-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginLeft="16dp"-->
    <!--android:layout_marginRight="16dp"-->
    <!--android:background="@drawable/profile_seperator" />-->

    <!--<LinearLayout-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:orientation="horizontal">-->

    <!--<RelativeLayout-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_gravity="center"-->
    <!--android:layout_marginLeft="12dp"-->
    <!--android:layout_weight="1.0">-->

    <!--<EditText-->
    <!--android:id="@+id/inputWebsiteTitle"-->
    <!--android:layout_width="fill_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerInParent="true"-->
    <!--android:background="@drawable/textfield"-->
    <!--android:clickable="true"-->
    <!--android:inputType="textCapSentences"-->
    <!--android:minHeight="48dp"-->
    <!--android:paddingRight="32dp"-->
    <!--android:textColor="@color/grey_dark"-->
    <!--android:textColorHint="@color/grey_light"-->
    <!--android:textSize="@dimen/text_size_medium" />-->

    <!--<ImageView-->
    <!--android:id="@+id/imgRemoveWebsite"-->
    <!--android:layout_width="32dp"-->
    <!--android:layout_height="32dp"-->
    <!--android:layout_alignRight="@+id/inputWebsiteTitle"-->
    <!--android:layout_centerVertical="true"-->
    <!--android:clickable="true"-->
    <!--android:scaleType="center"-->
    <!--android:src="@drawable/ic_remove"-->
    <!--android:visibility="invisible" />-->
    <!--</RelativeLayout>-->

    <!--<ImageView-->
    <!--android:layout_width="48dp"-->
    <!--android:layout_height="48dp"-->
    <!--android:layout_gravity="center_vertical"-->
    <!--android:layout_marginRight="8dp"-->
    <!--android:scaleType="center"-->
    <!--android:src="@drawable/ic_public_big" />-->
    <!--</LinearLayout>-->


</LinearLayout>